# mogul-logistics

./: .dockerignore  .gitignore  DEBUG_VALIDATION.md  Dockerfile  FINAL_SUBMISSION_CHECKLIST.md  FINAL_SUMMARY.md  HOW_TO_VERIFY_SHIPMENT_SELECTION.md  JUDGE_GUIDE.md  QUICK_UI_IMPROVEMENTS.md  README.md  READY_TO_SUBMIT.md  SMART_SHIPMENT_VALIDATION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  TOP3_FEATURES.md  TOP3_IMPROVEMENTS_IMPLEMENTED.md  UI_UX_PLAN.md  __init__.py  apply_ui_viz.py  client.py  conftest.py  docker-compose.yml  generate_training_data.py  inference.py  models.py  openenv.yaml  pyproject.toml  simple_test.py  start_server.cmd  start_server.sh  submit.cmd  test_all.py  test_inference_local.py  test_inference_quick.py  train_comprehensive.py  train_demo.py  train_standalone.py  train_via_api.py  ui_improvements.py
assets/: policy_task_easy.pt  policy_task_hard.pt  policy_task_medium.pt  trained_policy.pt  training_curve.json
server/: __init__.py  app.py  constants.py  constraints_viz.py  environment.py  explainable_ai.py  graders.py  gradio_custom.py  gradio_styles.py  heuristic.py  multi_agent.py  requirements.txt  route_map.py  scenarios.py  tasks.py  training_viz.py  ui_enhancements_2026.py
tests/: conftest.py  test_environment.py  test_graders.py  test_inference.py  test_integration.py  test_models.py  test_scenarios.py  test_top3_features.py
